--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="cabecalho__menu">
             <a href="index.html" class="cabecalho__menu__link">Home</a>
             <a href="#" class="cabecalho__menu__link">Sobre</a>
-            <a href="#" class="cabecalho__menu__link">Dicas</a>
+            <a href="dicas.html" class="cabecalho__menu__link">Dicas</a>
             <a href="#" class="cabecalho__menu__link">Loja</a>
             <a href="#" class="cabecalho__menu__link">Contato</a>
         </nav>
